<resources>
    <string name="app_name">School Management</string>
    <string name="school_name">LRI School</string>
    <string name="copyright">All rights reserved</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="school_full_name">L.R.I. School</string>
    <string name="login_as">Login as</string>
    <string name="school_slogan">Lead The World LRI Way</string>
    <string name="administrator">Administrator</string>
    <string name="student">Student</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="gallary">Gallery</string>
    <string name="id_number">Id Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="grade">Grade</string>
    <string name="calender">Calender</string>
    <string name="welcome_">Welcome</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
</resources>