<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".studentfragments.StudentHomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:ignore="UselessParent">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/lrilogo"
                android:contentDescription="@string/school_full_name"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:paddingVertical="30dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_"
                android:fontFamily="@font/ubuntumedium"
                android:textSize="60sp"/>

            <TextView
                android:id="@+id/homeSetFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dongleregular"
                android:textSize="60sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:id="@+id/calenderCard"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="30dp"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:background="@drawable/card_view">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_calender_primary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:text="@string/calender"
                    android:fontFamily="@font/dongleregular"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/notifcationCard"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="30dp"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:background="@drawable/card_view">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_calender_primary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:text="@string/notification"
                    android:fontFamily="@font/dongleregular"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>